--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "build": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js --config app-config/webpack.config.js --env.production",
     "build:clean": "rimraf wwwroot/build",
     "build:analyze": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js --config app-config/webpack.config.js --env.production --env.analyze",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "extract-i18n": "ngx-translate-extract --input ./app --output ../backend/src/Squidex/wwwroot/assets/i18n/ --clean --sort --format namespaced-json --key-as-default-value"
   },
   "dependencies": {
     "@angular/animations": "9.0.2",
@@ -25,6 +26,8 @@
     "@angular/platform-browser-dynamic": "9.0.2",
     "@angular/platform-server": "9.0.2",
     "@angular/router": "9.0.2",
+    "@ngx-translate/core": "^12.1.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "angular-mentions": "^1.1.3",
     "angular2-chartjs": "0.5.1",
     "babel-polyfill": "6.26.0",
@@ -53,6 +56,7 @@
     "@angular-devkit/build-optimizer": "^0.900.3",
     "@angular/compiler": "9.0.2",
     "@angular/compiler-cli": "9.0.2",
+    "@biesbjerg/ngx-translate-extract": "^4.2.0",
     "@ngtools/webpack": "9.0.3",
     "@types/core-js": "2.5.3",
     "@types/jasmine": "3.5.5",
